# Alse-proyecto-final

./: CMakeLists.txt  CMakeLists.txt.usuario  README.md
include/: adddevicedialog.h  databasemanager.h  device.h  devicemanager.h  loginmanager.h  loginwindow.h  mainwindow.h  registerwindow.h  user.h
src/: adddevicedialog.cpp  databasemanager.cpp  device.cpp  devicemanager.cpp  loginmanager.cpp  loginwindow.cpp  main.cpp  mainwindow.cpp  registerwindow.cpp  user.cpp
ui/: adddevicedialog.ui  loginwindow .ui  mainwindow .ui  registerwindow.ui
